<resources>
    <string name="app_name">MagicBall</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Magic 8 Ball</string>
    <string name="menu_slideshow">Create Custom</string>
    <string name="menu_tools">Go to Custom</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="name">Name</string>
    <string name="back">back</string>
    <string name="next">Next</string>
    <string name="enter_your_question">Enter your question</string>
    <string name="click_to_get_your_fortune">Click to get your fortune</string>
    <string name="enter_a_quesion">Enter a Quesion</string>
    <string name="click_for_fortune">Click For Fortune</string>
    <string name="todooooo">TODO</string>
    <string name="add">Add</string>
    <string name="enter_custom_answer">Enter Custom Answer</string>
    <string name="todofdsfds">TODO</string>
    <string name="click_to_submit_for_fortune">Click To Submit For Fortune</string>
    <string name="enter_your_questions">Enter Your Question</string>
    <string name="enter_your_questionss">Enter Your Question</string>
    <string name="enter_a_question">Enter A Question</string>
    <string name="enter_10_good_outcomes">Enter 10. Good outcomes</string>
    <string name="backd">Back</string>
    <string name="done">Done</string>
    <string name="todo">TODO</string>
    <string name="fortune">TODO</string>
    <string name="sleep">TODO</string>
    <string name="fgfdg">TODO</string>

</resources>
